--- a/client/www/templates/login.html
+++ b/client/www/templates/login.html
@@ -2,10 +2,10 @@
   <ion-content class="content-app">
     <h4 class="white-text padding-login"><i class="ion-log-in"></i> Se connecter</h4>
     <div class="list">
-      <label class="item item-input home-form">
+      <label class="item item-input home-form mar-login">
         <input type="email" placeholder="Email" data-ng-model="loginUser.email">
       </label>
-      <label class="item item-input home-form">
+      <label class="item item-input home-form mar-login">
         <input type="password" placeholder="Mot de passe" data-ng-model="loginUser.password">
       </label>
       <div class="white-text padding-login">Mot de passe oublié ? <a ui-sref="app.recovery">ICI</a></div>
