--- a/client/www/templates/register.html
+++ b/client/www/templates/register.html
@@ -2,13 +2,13 @@
   <ion-content class="content-app">
     <h4 class="white-text padding-login"><i class="ion-edit"></i> Créer ton compte:</h4>
     <div class="list">
-      <label class="item item-input home-form">
+      <label class="item item-input home-form mar-login">
         <input type="email" placeholder="Email" data-ng-model="registerUser.email">
       </label>
-      <label class="item item-input home-form">
+      <label class="item item-input home-form mar-login">
         <input type="password" placeholder="Mot de passe" data-ng-model="registerUser.password">
       </label>
-      <label class="item item-input home-form">
+      <label class="item item-input home-form mar-login">
         <input type="password" placeholder="Confirmer mot de passe" data-ng-model="registerUser.password_confirmation">
       </label>
       <label class="item item-input home-form" data-ng-if="ifNeemStyler()">
