--- a/client/www/templates/agenda-neemstyler.html
+++ b/client/www/templates/agenda-neemstyler.html
@@ -1,10 +1,21 @@
 <ion-view view-title="Neemaa">
   <ion-content class="content-app">
-    <h4 class="white-text">Agenda</h4>
-    <calendar calendar-mode="mode" event-source="eventSource" time-selected="onTimeSelected(selectedTime)">
+    <button id="button-agenda-rdv"><i class="ion-plus-round"></i> Ajouter rendez-vous</button>
+    <h4 class="white-text"><i class="ion-calendar"></i> Agenda</h4>
+    <calendar calendar-mode="mode" event-source="eventSource" time-selected="onTimeSelected(selectedTime)"></calendar>
+    <div class="row">
+      <ul>
+        <li class="agenda-date">Jeudi 4 semp 2000 :</li>
+        <li class="info-agenda">  M.dupont</li>
+        <li class="info-agenda">  Service</li>
+        <li class="info-agenda">  8h à 11h</li>
+      </ul>
+    </div>
   </ion-content>
 
   <div class="bar bar-footer">
-    <button class="footer-button" data-ng-click="loginUser(loginUser)">Confirmer</button>
+    <button class="button-agenda" data-ng-click="loginUser(loginUser)">Rendez-vous</button>
+    <button class="button-agenda" data-ng-click="loginUser(loginUser)">Mon Agenda</button>
+    <button class="button-agenda" data-ng-click="loginUser(loginUser)">Ma Semaine</button>
   </div>
 </ion-view>
