--- a/client/www/templates/agenda-neemstyler.html
+++ b/client/www/templates/agenda-neemstyler.html
@@ -1,7 +1,216 @@
 <ion-view view-title="Neemaa">
   <ion-content class="content-app">
     <div data-ng-if="agendaPageConfig()">
-      Config Page
+      <div class="row text-center">
+        <div class="col">
+          <h4 class="white-text">Mes Horraire Ouverture</h4>
+        </div>
+      </div>
+      <div class="row">
+        <p>Configuration des horraires d'ouverture de l'entreprise</p>
+      </div>
+      <div>
+        <table>
+          <tr>
+            <td></td>
+            <td class="time-agenda">Matin</td>
+            <td class="time-agenda">Après-Midi</td>
+            <td class="time-agenda test">Férmer</td>
+          </tr>
+          <tr class="day-agenda">
+            <td class="date">Lundi</td>
+            <td  class="time-agenda">
+              <select>
+                <option>07h</option>
+                <option>08h</option>
+                <option>09h</option>
+                <option>10h</option>
+                <option>11h</option>
+                <option>12h</option>
+              </select></td>
+            <td class="time-agenda">
+              <select>
+                <option>13h</option>
+                <option>14h</option>
+                <option>15h</option>
+                <option>16h</option>
+                <option>17h</option>
+                <option>18h</option>
+                <option>19h</option>
+                <option>20h</option>
+              </select>
+            </td>
+            <td class="time-agenda test">
+              <ion-checkbox ng-model="isChecked" class="check-date"></ion-checkbox>
+            </td>
+          </tr>
+          <tr class="day-agenda">
+            <td class="date">Mardi</td>
+            <td  class="time-agenda">
+              <select>
+                <option>07h</option>
+                <option>08h</option>
+                <option>09h</option>
+                <option>10h</option>
+                <option>11h</option>
+                <option>12h</option>
+              </select></td>
+            <td class="time-agenda">
+              <select>
+                <option>13h</option>
+                <option>14h</option>
+                <option>15h</option>
+                <option>16h</option>
+                <option>17h</option>
+                <option>18h</option>
+                <option>19h</option>
+                <option>20h</option>
+              </select>
+            </td>
+            <td class="time-agenda test">
+              <ion-checkbox ng-model="isChecked" class="check-date"></ion-checkbox>
+            </td>
+          </tr>
+          <tr class="day-agenda">
+            <td class="date">Mercredi</td>
+            <td  class="time-agenda">
+              <select>
+                <option>07h</option>
+                <option>08h</option>
+                <option>09h</option>
+                <option>10h</option>
+                <option>11h</option>
+                <option>12h</option>
+              </select></td>
+            <td class="time-agenda">
+              <select>
+                <option>13h</option>
+                <option>14h</option>
+                <option>15h</option>
+                <option>16h</option>
+                <option>17h</option>
+                <option>18h</option>
+                <option>19h</option>
+                <option>20h</option>
+              </select>
+            </td>
+            <td class="time-agenda test">
+              <ion-checkbox ng-model="isChecked" class="check-date"></ion-checkbox>
+            </td>
+          </tr>
+          <tr class="day-agenda">
+            <td class="date">Jeudi</td>
+            <td  class="time-agenda">
+              <select>
+                <option>07h</option>
+                <option>08h</option>
+                <option>09h</option>
+                <option>10h</option>
+                <option>11h</option>
+                <option>12h</option>
+              </select></td>
+            <td class="time-agenda">
+              <select>
+                <option>13h</option>
+                <option>14h</option>
+                <option>15h</option>
+                <option>16h</option>
+                <option>17h</option>
+                <option>18h</option>
+                <option>19h</option>
+                <option>20h</option>
+              </select>
+            </td>
+            <td class="time-agenda test">
+              <ion-checkbox ng-model="isChecked" class="check-date"></ion-checkbox>
+            </td>
+          </tr>
+          <tr class="day-agenda">
+            <td class="date">Vendredi</td>
+            <td  class="time-agenda">
+              <select>
+                <option>07h</option>
+                <option>08h</option>
+                <option>09h</option>
+                <option>10h</option>
+                <option>11h</option>
+                <option>12h</option>
+              </select></td>
+            <td class="time-agenda">
+              <select>
+                <option>13h</option>
+                <option>14h</option>
+                <option>15h</option>
+                <option>16h</option>
+                <option>17h</option>
+                <option>18h</option>
+                <option>19h</option>
+                <option>20h</option>
+              </select>
+            </td>
+            <td class="time-agenda test">
+              <ion-checkbox ng-model="isChecked" class="check-date"></ion-checkbox>
+            </td>
+          </tr>
+          <tr class="day-agenda">
+            <td class="date">Samedi</td>
+            <td  class="time-agenda">
+              <select>
+                <option>07h</option>
+                <option>08h</option>
+                <option>09h</option>
+                <option>10h</option>
+                <option>11h</option>
+                <option>12h</option>
+              </select></td>
+            <td class="time-agenda">
+              <select>
+                <option>13h</option>
+                <option>14h</option>
+                <option>15h</option>
+                <option>16h</option>
+                <option>17h</option>
+                <option>18h</option>
+                <option>19h</option>
+                <option>20h</option>
+              </select>
+            </td>
+            <td class="time-agenda test">
+              <ion-checkbox ng-model="isChecked" class="check-date"></ion-checkbox>
+            </td>
+          </tr>
+          <tr class="day-agenda">
+            <td class="date">Dimanche</td>
+            <td  class="time-agenda">
+              <select>
+                <option>07h</option>
+                <option>08h</option>
+                <option>09h</option>
+                <option>10h</option>
+                <option>11h</option>
+                <option>12h</option>
+              </select></td>
+            <td class="time-agenda">
+              <select>
+                <option>13h</option>
+                <option>14h</option>
+                <option>15h</option>
+                <option>16h</option>
+                <option>17h</option>
+                <option>18h</option>
+                <option>19h</option>
+                <option>20h</option>
+              </select>
+            </td>
+            <td class="time-agenda test">
+              <ion-checkbox ng-model="isChecked" class="check-date"></ion-checkbox>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div id="button-ouve">
+        <button class="button-ouverture">Validation</button>
+      </div>
     </div>
     <div data-ng-if="agendaPage()">
       <button id="button-agenda-rdv"><i class="ion-plus-round"></i> Ajouter rendez-vous</button>
