--- a/client/www/templates/register.html
+++ b/client/www/templates/register.html
@@ -19,7 +19,10 @@
     <div class="white-text padding-login">Déja inscrit, cliquer <a ui-sref="app.login">ICI</a></div>
   </ion-content>
 
-  <div class="bar bar-footer">
+<!--  <div class="bar bar-footer">
     <button class="footer-button" data-ng-click="registerUser(registerUser)">Confirmer</button>
+  </div>-->
+  <div class="bar bar-footer">
+    <button class="footer-button" data-ng-click="registerUser(registerUser)"><span><img id="button-register" src="img/gear.gif"></span>Inscription</button>
   </div>
 </ion-view>
