register button loading toogle

--- a/client/www/templates/register.html
+++ b/client/www/templates/register.html
@@ -23,6 +23,6 @@
     <button class="footer-button" data-ng-click="registerUser(registerUser)">Confirmer</button>
   </div>-->
   <div class="bar bar-footer">
-    <button class="footer-button" data-ng-click="registerUser(registerUser)"><span><img id="button-register" src="img/gear.gif"></span>Inscription</button>
+    <button class="footer-button" data-ng-click="registerUser(registerUser)"><span data-ng-show="chargRegister()"><img id="button-register" src="img/gear.gif"></span>Inscription</button>
   </div>
 </ion-view>
