--- a/client/www/css/style.css
+++ b/client/www/css/style.css
@@ -329,20 +329,6 @@ th{
   color: black !important;
 }
 
-.button-agenda{
-  margin-right: auto;
-  margin-left: auto;
-  height: 10%;
-  background-color: #5C2542;
-  border: none;
-  border-radius: 10px;
-  padding-top: 2% !important;
-  padding-bottom: 12%!important;
-  font-size: 4vw !important;
-  font-weight: bold !important;
-  color: white !important;
-}
-
 #button-agenda-rdv{
   float: right;
   background-color: #5C2542;
@@ -441,4 +427,25 @@ th{
   font-weight: bold !important;
   color: white !important;
   margin-top: 30px;
+}
+#calandar{
+  padding-right: 25% !important;
+  padding-top: 2% !important;
+  padding-bottom: 12%!important;
+  color: white !important;
+}
+
+#book{
+  padding-left: 25% !important;
+  padding-top: 2% !important;
+  padding-bottom: 12%!important;
+  color: white !important;
+}
+
+#white{
+  color: white;
+}
+
+.test{
+
 }
