--- a/client/www/templates/admin.html
+++ b/client/www/templates/admin.html
@@ -5,6 +5,10 @@
   </ion-content>
 
   <div class="bar bar-footer">
-    <button class="footer-button" data-ng-click="loginUser(loginUser)">Confirmer</button>
+    <a class="button button-icon ion-person-stalker icons-admin" >NeemStyler</a>
+    <a class="button button-icon ion-card icons-admin" >Payment</a>
+    <a class="button button-icon ion-arrow-shrink icons-admin" >Service</a>
+    <a class="button button-icon ion-calendar icons-admin" >Calendrier</a>
+    <a class="button button-icon ion-ios-star icons-admin" >Avis</a><span></span>
   </div>
 </ion-view>
