--- a/client/www/templates/admin.html
+++ b/client/www/templates/admin.html
@@ -1,13 +1,144 @@
 <ion-view view-title="Neemaa">
   <ion-content class="content-app">
     <div id="admin-neemstyler-page" data-ng-if="adminNeemStylerPage">
-      Page Neem
+      <div class="row text-center">
+        <div class="col">
+          <h4 class="white-text titre">Neemstyler</h4>
+        </div>
+      </div>
+      <table>
+        <tr>
+          <td class="td"></td>
+          <td class="td" id="titretd">Prénom</td>
+          <td class="td">Nom</td>
+          <td class="td padtd">Voir</td>
+          <td class="td">Edit</a></td>
+          <td class="td">Supp</a></td>
+        </tr>
+        <tr>
+          <td class="td"><i class="ion-person"></i></td>
+          <td class="td">Prénom</td>
+          <td class="td">Nom</td>
+          <td class="td padtd"><a class="ion-eye white-text"></a></td>
+          <td class="td"><a class="ion-edit white-text"></a></td>
+          <td class="td"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+        <tr>
+          <td class="td"><i class="ion-person"></i></td>
+          <td class="td">Prénom</td>
+          <td class="td">Nom</td>
+          <td class="td padtd"><a class="ion-eye white-text"></a></td>
+          <td class="td"><a class="ion-edit white-text"></a></td>
+          <td class="td"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+        <tr>
+          <td class="td"><i class="ion-person"></i></td>
+          <td class="td">Prénom</td>
+          <td class="td">Nom</td>
+          <td class="td padtd"><a class="ion-eye white-text"></a></td>
+          <td class="td"><a class="ion-edit white-text"></a></td>
+          <td class="td"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+        <tr>
+          <td class="td"><i class="ion-person"></i></td>
+          <td class="td">Prénom</td>
+          <td class="td">Nom</td>
+          <td class="td padtd"><a class="ion-eye white-text"></a></td>
+          <td class="td"><a class="ion-edit white-text"></a></td>
+          <td class="td"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+        <tr>
+          <td class="td"><i class="ion-person"></i></td>
+          <td class="td">Prénom</td>
+          <td class="td">Nom</td>
+          <td class="td padtd"><a class="ion-eye white-text"></a></td>
+          <td class="td"><a class="ion-edit white-text"></a></td>
+          <td class="td"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+       </table>
     </div>
     <div id="admin-payment-page" data-ng-if="adminPaymentPage">
       Page Payment
     </div>
     <div id="admin-service-page" data-ng-if="adminServicePage">
-      Page Service
+      <div class="row text-center">
+        <div class="col">
+          <h4 class="white-text titre">Service</h4>
+        </div>
+      </div>
+      <table>
+        <tr>
+          <td></td>
+          <td class="td-service">Nom-societe</td>
+          <td class="td-service">Nom-service</td>
+          <td class="td-service">Prix</td>
+          <td class="td-service">Temps</td>
+          <td class="td-service">Voir</td>
+          <td class="td-service">Edit</a></td>
+          <td class="td-service">Act/Des</td>
+          <td class="td-service">Supp</a></td>
+        </tr>
+        <tr>
+          <td><i class="ion-arrow-shrink"></i></td>
+          <td class="td-service">Nom-societe</td>
+          <td class="td-service">Nom-service</td>
+          <td class="td-service">Prix</td>
+          <td class="td-service">Temps</td>
+          <td class="td-service"><a class="ion-eye white-text"></a></td>
+          <td class="td-service"><a class="ion-edit white-text"></a></td>
+          <td class="td-service"><span class="active">Activer</span></td>
+          <td class="td-service" style="display: none"><span class="desactiver">Desactiver</span></td>
+          <td class="td-service"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+        <tr>
+          <td><i class="ion-arrow-shrink"></i></td>
+          <td class="td-service">Nom-societe</td>
+          <td class="td-service">Nom-service</td>
+          <td class="td-service">Prix</td>
+          <td class="td-service">Temps</td>
+          <td class="td-service"><a class="ion-eye white-text"></a></td>
+          <td class="td-service"><a class="ion-edit white-text"></a></td>
+          <td class="td-service"><span class="active">Activer</span></td>
+          <td class="td-service" style="display: none"><span class="desactiver">Desactiver</span></td>
+          <td class="td-service"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+        <tr>
+          <td><i class="ion-arrow-shrink"></i></td>
+          <td class="td-service">Nom-societe</td>
+          <td class="td-service">Nom-service</td>
+          <td class="td-service">Prix</td>
+          <td class="td-service">Temps</td>
+          <td class="td-service"><a class="ion-eye white-text"></a></td>
+          <td class="td-service"><a class="ion-edit white-text"></a></td>
+          <td class="td-service"><span class="active">Activer</span></td>
+          <td class="td-service" style="display: none"><span class="desactiver">Desactiver</span></td>
+          <td class="td-service"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+        <tr>
+          <td><i class="ion-arrow-shrink"></i></td>
+          <td class="td-service">Nom-societe</td>
+          <td class="td-service">Nom-service</td>
+          <td class="td-service">Prix</td>
+          <td class="td-service">Temps</td>
+          <td class="td-service"><a class="ion-eye white-text"></a></td>
+          <td class="td-service"><a class="ion-edit white-text"></a></td>
+          <td class="td-service"><span class="active">Activer</span></td>
+          <td class="td-service" style="display: none"><span class="desactiver">Desactiver</span></td>
+          <td class="td-service"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+        <tr>
+          <td><i class="ion-arrow-shrink"></i></td>
+          <td class="td-service">Nom-societe</td>
+          <td class="td-service">Nom-service</td>
+          <td class="td-service">Prix</td>
+          <td class="td-service">Temps</td>
+          <td class="td-service"><a class="ion-eye white-text"></a></td>
+          <td class="td-service"><a class="ion-edit white-text"></a></td>
+          <td class="td-service"><span class="active">Activer</span></td>
+          <td class="td-service" style="display: none"><span class="desactiver">Desactiver</span></td>
+          <td class="td-service"><a class="ion-trash-b white-text"></a></td>
+        </tr>
+      </table>
     </div>
     <div id="admin-calendar-page" data-ng-if="adminCalendarPage">
       Page calendar
